objects/Request_Resource__c.object
<CustomObject>
    <description>This object is used to contain all dev resources for a Request.</description>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Request Resources</relationshipLabel>
        <relationshipName>Request_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Type__c</fullName>
        <label>Resource Type</label>
        <picklist>
            <picklistValues>
                <fullName>ApexClass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexComponent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexTrigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomSObject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StandardSObject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StaticResource</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Request Resource</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Request Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>